8262831: [lworld] C2 compilation fails with assert "should be addp but is Phi"

Reviewed-by: thartmann